# auto_aspect_plugin

.github/workflows/: build.yml
auto_aspect_plugin/: CMakeLists.txt  README.md
auto_aspect_plugin/src/: auto_aspect.cpp
